@@ -141,6 +141,10 @@ public enum FacebookMessagingExceptionCodes implements OXExceptionCode {
      * Missing facebook configuration parameter "%1$s". Please re-create facebook account.
      */
     MISSING_CONFIG_PARAM(FacebookMessagingExceptionMessages.MISSING_CONFIG_PARAM_MSG, CATEGORY_ERROR, 18),
+    /**
+     * A Facebook API error occurred. Error code: %1$s. Error message: "%2$s". Please refer to http://fbdevwiki.com/wiki/Error_codes to look-up error code.
+     */
+    FB_API_ERROR(FacebookMessagingExceptionMessages.FB_API_ERROR_MSG, CATEGORY_SERVICE_DOWN, 19),
 
     ;
 
