@@ -2,6 +2,7 @@
 
  - Fix for bug 22051: Re-parse Content-Type with regexes
  - Fix for bug 22062: Check for non-null mail identifier
+ - Fix for bug 21933: Dealing with possible Facebook API error response (http://fbdevwiki.com/wiki/Error_codes)
 
 * 2012-05-14 - thorben.betten@open-xchange.com
 
